[project]
name = "fitbit2oscar"
version = "0.1.0"
description = "A command-line interface (CLI) tool designed to convert Fitbit sleep and health data into a format compatible with the OSCAR CPAP reporting software."
readme = "README.md"
authors = [
    { name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
]

[project.scripts]
fitbit2oscar = "fitbit2oscar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
